fixing the font size on iphones

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -665,14 +665,14 @@ body#riverranger-app {
           line-height: 1em;
           margin: 0;
           @media only screen and (max-width : 600px){
-            font-size: 65px;
+            font-size: 62px;
           }
         }
         h2{
           font-size: 35px;
           margin-top: 30px;
           @media only screen and (max-width : 600px){
-            font-size: 30px;
+            font-size: 27px;
             margin-top: 22px;
           }
         }
